--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -4,18 +4,20 @@
   <meta charset="utf-8">
   <title>Jasmine Spec Runner for jqCron lib</title>
 
-  <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.1.2/jasmine_favicon.png">
-  <link rel="stylesheet" href="lib/jasmine-2.1.2/jasmine.css">
+  <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.4.1/jasmine_favicon.png">
+  <link rel="stylesheet" href="lib/jasmine-2.4.1/jasmine.css">
   <link rel="stylesheet" type="text/css" href="../src/jqCron.css"/>
 
   <script src="lib/jquery-1.7.2.min.js"></script>
-  <script src="lib/jasmine-2.1.2/jasmine.js"></script>
-  <script src="lib/jasmine-2.1.2/jasmine-html.js"></script>
-  <script src="lib/jasmine-2.1.2/boot.js"></script>
+  <script src="lib/jasmine-2.4.1/jasmine.js"></script>
+  <script src="lib/jasmine-2.4.1/jasmine-html.js"></script>
+  <script src="lib/jasmine-2.4.1/boot.js"></script>
 
-
+  <!-- source files -->
   <script src="../src/jqCron.js"></script>
   <script src="../src/jqCron.en.js"></script>
+
+  <!-- Spec file -->
   <script src="spec/jqCronSpec.en.js"></script>
 
 </head>
