--- a/demo/index.html
+++ b/demo/index.html
@@ -12,7 +12,7 @@
     <script src="../node_modules/multiple-select/multiple-select.js"></script>
   </head>
   <body>
-    <h1>jqCron 2.0</h1>
+    <h1>jqCron 2.0 <small>(James name this something better)</small></h1>
     <h3>Init Schedule Before Doing Anything. This proves nothing is wired to document.ready</h3>
     <button class="init">Okay already, PUNCH IT!</button>  Debug <input type="text" id="debug" readonly/> <button class="read">Read Cron</button>
 
