Fixed HTML layout to properly close tags, fixed broken tests

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -25,7 +25,7 @@
         <script src="spec/jqCronSpec.en.js"></script>
 	</head>
 	<body>
-		<div id="cronexp"/>
+		<div id="cronexp"></div>
 
 		<div id="Schedule">
             <span>
@@ -37,7 +37,7 @@
             <br/><br/>
             <span>
                 <div id="timeOfDayOptions">
-                  <div><input type="time" name="time" />
+                  <div><input type="time" name="time" /></div>
                 </div>
             </span>
             <br />
@@ -140,7 +140,11 @@
         <br/>
         <br/>
         <br/>
-
+        <div>
+            <select name="SNS">
+                <option>Oops</option>
+            </select>
+        </div>
 	</body>
 
 </html>
