Don't require an object to be able to initialize the plugin

--- a/demo/index.html
+++ b/demo/index.html
@@ -29,7 +29,7 @@
        }
 
         $('.init').on('click', function(){
-          $s.jqCron({});
+          $s.jqCron();
           updateDebug();
         });
 
