Renamed to jsCronUI

--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Jasmine Spec Runner for jqCron lib</title>
+		<title>Jasmine Spec Runner for jsCronUI lib</title>
 
 		<link rel="shortcut icon" type="image/png" href="lib/jasmine-2.4.1/jasmine_favicon.png" />
 		<link rel="stylesheet" href="lib/jasmine-2.4.1/jasmine.css" />
-		<!--<link rel="stylesheet" type="text/css" href="../src/jqCron.css"/>-->
+		<!--<link rel="stylesheet" type="text/css" href="../src/jsCronUI.css"/>-->
     <link rel="stylesheet" type="text/css" href="../node_modules/multiple-select/multiple-select.css" />
 
 		<script src="lib/jquery-1.7.2.min.js"></script>
@@ -16,13 +16,13 @@
 		<script src="lib/jasmine-2.4.1/boot.js" ></script>
 
 		<!-- source files -->
-        <!--<script src="../src/jqCron.js"></script>-->
-        <script src="../src/jqCronNew.js"></script>
+        <!--<script src="../src/jsCronUI.js"></script>-->
+        <script src="../src/jsCronUI.js"></script>
         <script src="../node_modules/multiple-select/multiple-select.js"></script>
-        <!--<script src="../src/jqCron.en.js"></script>-->
+        <!--<script src="../src/jsCronUI.en.js"></script>-->
 
 		<!-- Spec file -->
-        <script src="spec/jqCronSpec.en.js"></script>
+        <script src="spec/jsCronUISpec.en.js"></script>
 	</head>
 	<body>
 		<div id="cronexp"/>
